--- a/app/src/main/res/layout/season_layout.xml
+++ b/app/src/main/res/layout/season_layout.xml
@@ -44,19 +44,19 @@
             android:id="@+id/date_temporada"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_marginStart="6dp"
             android:layout_marginTop="@dimen/trade_size_dp_6"
-            app:layout_constraintStart_toEndOf="@id/image_temporada"
+            app:layout_constraintStart_toStartOf="@+id/temporada"
             app:layout_constraintTop_toBottomOf="@id/temporada"
             tools:text="2015-12-21" />
 
         <ImageView
             android:id="@+id/bt_assistido"
-            android:layout_width="2dp"
-            android:layout_height="3dp"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
             android:layout_gravity="end|center_horizontal"
             android:layout_margin="@dimen/trade_size_dp_5"
             android:visibility="visible"
+            tools:src="@drawable/icon_visto"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintHorizontal_bias="0.7"
             app:layout_constraintStart_toEndOf="@id/date_temporada"
@@ -83,12 +83,13 @@
             android:orientation="horizontal"
             android:importantForAccessibility="no"
             android:focusable="false"
-            android:layout_marginStart="2dp"
             android:numColumns="auto_fit"
-            android:layout_marginTop="8dp"
+            android:scrollbars="none"
+            android:layout_margin="@dimen/trade_size_dp_5"
+            android:layout_marginTop="@dimen/trade_size_dp_12"
             app:layout_constraintStart_toEndOf="@id/image_temporada"
             app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintTop_toBottomOf="@id/date_temporada" />
+            app:layout_constraintTop_toBottomOf="@id/bt_assistido" />
 
     </androidx.constraintlayout.widget.ConstraintLayout>
 </androidx.cardview.widget.CardView>
