--- a/app/src/main/res/layout/season_layout.xml
+++ b/app/src/main/res/layout/season_layout.xml
@@ -16,51 +16,20 @@
         android:gravity="center"
         android:orientation="horizontal">
 
-        <ImageView
-            android:id="@+id/image_temporada"
-            android:layout_width="wrap_content"
+        <GridView
+            android:id="@+id/container_stream"
+            android:layout_width="0dp"
             android:layout_height="wrap_content"
-            android:minHeight="45dp"
-            android:padding="3dp"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toTopOf="parent"
-            tools:src="@drawable/poster_empty" />
-
-        <TextView
-            android:id="@+id/temporada"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_marginStart="6dp"
-            android:layout_marginTop="6dp"
-            android:text="@string/temporadas"
-            android:textSize="@dimen/trade_txt_size_sp_18"
-            android:textStyle="normal|bold|italic"
-            app:layout_constraintEnd_toStartOf="@id/bt_assistido"
-            app:layout_constraintHorizontal_bias="0.1"
-            app:layout_constraintStart_toEndOf="@id/image_temporada"
-            app:layout_constraintTop_toTopOf="@id/image_temporada" />
-
-        <TextView
-            android:id="@+id/date_temporada"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_marginTop="@dimen/trade_size_dp_6"
-            app:layout_constraintStart_toStartOf="@+id/temporada"
-            app:layout_constraintTop_toBottomOf="@id/temporada"
-            tools:text="2015-12-21" />
-
-        <ImageView
-            android:id="@+id/bt_assistido"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_gravity="end|center_horizontal"
             android:layout_margin="@dimen/trade_size_dp_5"
-            android:visibility="visible"
-            tools:src="@drawable/icon_visto"
+            android:layout_marginTop="@dimen/trade_size_dp_12"
+            android:focusable="false"
+            android:importantForAccessibility="no"
+            android:numColumns="auto_fit"
+            android:orientation="horizontal"
+            android:scrollbars="none"
             app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintHorizontal_bias="0.7"
-            app:layout_constraintStart_toEndOf="@id/date_temporada"
-            app:layout_constraintTop_toTopOf="@id/date_temporada" />
+            app:layout_constraintStart_toEndOf="@id/image_temporada"
+            app:layout_constraintTop_toBottomOf="@id/bt_assistido" />
 
         <ImageButton
             android:id="@+id/popup_temporada"
@@ -76,20 +45,51 @@
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintTop_toTopOf="parent" />
 
-        <GridView
-            android:id="@+id/container_stream"
-            android:layout_width="0dp"
+        <ImageView
+            android:id="@+id/image_temporada"
+            android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:orientation="horizontal"
-            android:importantForAccessibility="no"
-            android:focusable="false"
-            android:numColumns="auto_fit"
-            android:scrollbars="none"
+            android:minHeight="45dp"
+            android:padding="3dp"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toTopOf="parent"
+            tools:src="@drawable/poster_empty" />
+
+        <ImageView
+            android:id="@+id/bt_assistido"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_gravity="end|center_horizontal"
             android:layout_margin="@dimen/trade_size_dp_5"
-            android:layout_marginTop="@dimen/trade_size_dp_12"
-            app:layout_constraintStart_toEndOf="@id/image_temporada"
+            android:visibility="visible"
             app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintTop_toBottomOf="@id/bt_assistido" />
+            app:layout_constraintHorizontal_bias="0.7"
+            app:layout_constraintStart_toEndOf="@id/date_temporada"
+            app:layout_constraintTop_toTopOf="@id/date_temporada"
+            tools:src="@drawable/icon_visto" />
+
+        <TextView
+            android:id="@+id/date_temporada"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="@dimen/trade_size_dp_6"
+            app:layout_constraintStart_toStartOf="@+id/temporada"
+            app:layout_constraintTop_toBottomOf="@id/temporada"
+            tools:text="2015-12-21" />
+
+        <TextView
+            android:id="@+id/temporada"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginStart="6dp"
+            android:layout_marginTop="6dp"
+            android:text="@string/temporadas"
+            android:textSize="@dimen/trade_txt_size_sp_18"
+            android:textStyle="normal|bold|italic"
+            app:layout_constraintEnd_toStartOf="@id/bt_assistido"
+            app:layout_constraintHorizontal_bias="0.1"
+            app:layout_constraintStart_toEndOf="@id/image_temporada"
+            app:layout_constraintTop_toTopOf="@id/image_temporada" />
 
     </androidx.constraintlayout.widget.ConstraintLayout>
 </androidx.cardview.widget.CardView>
