refeito tela de seguindo com shimmer. Não terminado

--- a/app/src/main/res/layout/calendar_adapter_loading.xml
+++ b/app/src/main/res/layout/calendar_adapter_loading.xml
@@ -1,13 +1,11 @@
 <?xml version="1.0" encoding="utf-8"?>
 <androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
-    xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
     android:layout_margin="@dimen/trade_size_dp_4"
-    android:background="?attr/selectableItemBackground"
-    android:focusable="true"
-    android:foreground="?attr/selectableItemBackground">
+    android:background="@drawable/background_loading_shimmer"
+    android:focusable="true">
 
     <androidx.constraintlayout.widget.ConstraintLayout
         android:layout_width="match_parent"
@@ -17,20 +15,19 @@
 
         <ImageView
             android:id="@+id/poster"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
+            android:layout_width="120dp"
+            android:layout_height="160dp"
             android:layout_marginStart="1dp"
             android:layout_marginLeft="1dp"
             android:adjustViewBounds="true"
+            android:background="@color/light_by_shimmer"
             android:cropToPadding="true"
             android:focusable="false"
             android:importantForAccessibility="no"
             android:scaleType="fitCenter"
-            android:src="@drawable/poster_empty"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toTopOf="parent" />
-
 
         <ProgressBar
             android:id="@+id/calendar_progress"
@@ -40,37 +37,34 @@
             android:layout_marginStart="8dp"
             android:layout_marginEnd="8dp"
             android:indeterminate="false"
-            android:theme="@style/AppTheme"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toEndOf="@id/faltante"
             app:layout_constraintTop_toTopOf="@id/faltante" />
 
         <TextView
             android:id="@+id/proximo_ver"
-            android:layout_width="0dp"
+            android:layout_width="20dp"
             android:layout_height="wrap_content"
             android:layout_marginStart="8dp"
             android:layout_marginLeft="8dp"
-            android:layout_marginTop="2dp"
-            android:textColor="@color/accent"
+            android:layout_marginTop="12dp"
+            android:background="@color/light_by_shimmer"
             android:textStyle="bold"
             app:layout_constraintStart_toEndOf="@+id/poster"
-            app:layout_constraintTop_toBottomOf="@+id/title"
-            tools:text="S1E2" />
+            app:layout_constraintTop_toBottomOf="@+id/title" />
 
         <TextView
             android:id="@+id/date"
-            android:layout_width="wrap_content"
+            android:layout_width="40dp"
             android:layout_height="wrap_content"
             android:layout_marginStart="8dp"
             android:layout_marginLeft="8dp"
-            android:layout_marginTop="2dp"
+            android:layout_marginTop="12dp"
             android:layout_marginRight="8dp"
+            android:background="@color/light_by_shimmer"
             android:textSize="12sp"
             app:layout_constraintStart_toEndOf="@+id/proximo_ver"
-            app:layout_constraintTop_toBottomOf="@+id/title"
-            tools:text="2016/12/1986" />
-
+            app:layout_constraintTop_toBottomOf="@+id/title" />
 
         <TextView
             android:id="@+id/ep_title"
@@ -78,38 +72,35 @@
             android:layout_height="wrap_content"
             android:layout_marginStart="8dp"
             android:layout_marginLeft="8dp"
-            android:layout_marginTop="2dp"
+            android:layout_marginTop="10dp"
             android:layout_marginRight="8dp"
+            android:background="@color/light_by_shimmer"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toEndOf="@+id/poster"
-            app:layout_constraintTop_toBottomOf="@+id/proximo_ver"
-            tools:text="Waldir e  Fatima" />
+            app:layout_constraintTop_toBottomOf="@+id/proximo_ver" />
 
         <TextView
             android:id="@+id/new_seguindo"
-            android:layout_width="wrap_content"
+            android:layout_width="40dp"
             android:layout_height="wrap_content"
+            android:background="@color/light_by_shimmer"
             android:fontFamily="sans-serif"
-            android:text="@string/new_segiundo"
             android:textAppearance="@style/TextAppearance.AppCompat"
-            android:textColor="@color/imdb"
             android:textStyle="normal|bold"
-            android:visibility="gone"
-            app:layout_constraintTop_toBottomOf="@id/calendar_progress"
             app:layout_constraintBottom_toBottomOf="@+id/poster"
             app:layout_constraintEnd_toEndOf="parent"
-            tools:visibility="visible" />
+            app:layout_constraintTop_toBottomOf="@id/calendar_progress" />
 
         <TextView
             android:id="@+id/faltante"
-            android:layout_width="wrap_content"
+            android:layout_width="20dp"
             android:layout_height="wrap_content"
             android:layout_marginStart="8dp"
             android:layout_marginLeft="8dp"
             android:layout_marginTop="6dp"
+            android:background="@color/light_by_shimmer"
             app:layout_constraintStart_toEndOf="@id/poster"
-            app:layout_constraintTop_toBottomOf="@id/ep_title"
-            tools:text="17/20" />
+            app:layout_constraintTop_toBottomOf="@id/ep_title" />
 
         <TextView
             android:id="@+id/title"
@@ -119,15 +110,13 @@
             android:layout_marginLeft="8dp"
             android:layout_marginTop="8dp"
             android:layout_marginRight="8dp"
+            android:background="@color/light_by_shimmer"
             android:ellipsize="end"
             android:maxLines="1"
-            android:textColor="@color/primary"
             android:textStyle="normal|bold"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toEndOf="@+id/poster"
-            app:layout_constraintTop_toTopOf="parent"
-            tools:text="Justiça" />
-
+            app:layout_constraintTop_toTopOf="parent" />
 
     </androidx.constraintlayout.widget.ConstraintLayout>
 </androidx.cardview.widget.CardView>
