--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -31,4 +31,7 @@
     <color name="blue_main">#ef0f0ffc</color>
     <color name="color_botton_main">#df531812</color>
 
+    <color name="gray_by_shimmer">#80EFE9E5</color>
+    <color name="light_by_shimmer">#dddddd</color>
+
 </resources>
