--- a/app/src/main/res/layout/seguindo.xml
+++ b/app/src/main/res/layout/seguindo.xml
@@ -2,7 +2,21 @@
 <FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    xmlns:tools="http://schemas.android.com/tools"
     android:orientation="vertical">
+
+    <ProgressBar
+        android:id="@+id/progress_temporadas"
+        style="@style/Widget.AppCompat.ProgressBar"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="@dimen/trade_size_dp_50"
+        android:indeterminate="false" />
+
+    <androidx.recyclerview.widget.RecyclerView
+        android:id="@+id/seguindo_recycle"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent" />
 
     <TextView
         android:id="@+id/text_search_empty"
@@ -11,19 +25,7 @@
         android:layout_gravity="center"
         android:layout_margin="@dimen/trade_size_dp_2"
         android:gravity="center"
+        tools:visibility="visible"
         android:visibility="gone" />
-
-    <androidx.recyclerview.widget.RecyclerView
-        android:id="@+id/seguindo_recycle"
-        android:layout_width="match_parent"
-        android:layout_height="match_parent" />
-
-    <ProgressBar
-        android:id="@+id/progressBarTemporadas"
-        style="@style/Widget.AppCompat.ProgressBar"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_marginTop="@dimen/trade_size_dp_50"
-        android:indeterminate="false" />
 
 </FrameLayout>
