--- a/app/src/main/res/layout/adapter_similares.xml
+++ b/app/src/main/res/layout/adapter_similares.xml
@@ -1,79 +1,88 @@
 <?xml version="1.0" encoding="utf-8"?>
 <androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
+    xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
     android:layout_margin="@dimen/trade_size_dp_3"
     android:background="?attr/selectableItemBackground"
     android:orientation="horizontal">
 
-    <LinearLayout
+    <androidx.constraintlayout.widget.ConstraintLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:background="?attr/selectableItemBackground"
         android:orientation="horizontal">
 
         <ImageView
-            android:id="@+id/img_similares"
+            android:id="@+id/similares_img"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_gravity="center"
             android:adjustViewBounds="true"
             android:minWidth="90dp"
+            android:scaleType="centerCrop"
             android:src="@drawable/poster_empty"
-            android:scaleType="centerCrop" />
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toTopOf="parent" />
 
-        <LinearLayout
-            android:layout_width="0dp"
+        <ImageView
+            android:id="@+id/similares_star"
+            android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_marginStart="@dimen/trade_size_dp_10"
-            android:layout_weight="0.75"
-            android:orientation="vertical">
+            android:contentDescription="@string/imagem_filme"
+            android:src="@android:drawable/star_big_on"
+            app:layout_constraintStart_toEndOf="@id/similares_img"
+            app:layout_constraintTop_toBottomOf="@id/similares_date_avaliable"
+            app:tint="@color/yellow" />
 
-            <TextView
-                android:id="@+id/similares_nome"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
+        <TextView
+            android:id="@+id/similares_date_avaliable"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:textSize="@dimen/trade_txt_size_sp_12"
+            app:layout_constraintStart_toEndOf="@id/similares_img"
+            app:layout_constraintTop_toBottomOf="@id/similares_name"
+            tools:text="2020" />
 
-                android:textSize="@dimen/trade_txt_size_sp_24" />
+        <TextView
+            android:id="@+id/similares_name"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:textSize="@dimen/trade_txt_size_sp_24"
+            app:layout_constraintStart_toEndOf="@id/similares_img"
+            app:layout_constraintTop_toTopOf="parent"
+            tools:text="Name Traduzido" />
 
-            <TextView
-                android:id="@+id/similares_data_lancamento"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:textSize="@dimen/trade_txt_size_sp_12" />
+        <TextView
+            android:id="@+id/similares_rated"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_gravity="center_vertical|center_horizontal|center"
+            android:textStyle="bold"
+            app:layout_constraintBottom_toBottomOf="@id/similares_star"
+            app:layout_constraintEnd_toEndOf="@id/similares_star"
+            app:layout_constraintStart_toStartOf="@id/similares_star"
+            app:layout_constraintTop_toTopOf="@id/similares_star"
+            tools:text="7.0" />
 
-            <LinearLayout
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content">
+        <TextView
+            android:id="@+id/similares_title_original"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_gravity="center_vertical"
+            android:layout_marginStart="@dimen/trade_size_dp_2"
+            android:layout_marginLeft="@dimen/trade_size_dp_2"
+            app:layout_constraintStart_toEndOf="@id/similares_star"
+            app:layout_constraintTop_toTopOf="@id/similares_star"
+            tools:text="Original Name" />
 
-                <FrameLayout
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content">
+        <androidx.constraintlayout.widget.Group
+            android:id="@+id/group_star"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            app:constraint_referenced_ids="similares_star, similares_rated" />
 
-                    <ImageView
-                        android:layout_width="wrap_content"
-                        android:layout_height="wrap_content"
-                        android:contentDescription="@string/imagem_filme"
-                        android:src="@android:drawable/star_big_on"
-                        android:tint="@color/yellow" />
-
-                    <TextView
-                        android:id="@+id/similares_voto_media"
-                        android:layout_width="wrap_content"
-                        android:layout_height="wrap_content"
-                        android:layout_gravity="center_vertical|center_horizontal|center" />
-                </FrameLayout>
-
-
-                <TextView
-                    android:id="@+id/similares_title_original"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:layout_gravity="center_vertical"
-                    android:layout_marginStart="@dimen/trade_size_dp_2" />
-            </LinearLayout>
-
-        </LinearLayout>
-
-    </LinearLayout>
+    </androidx.constraintlayout.widget.ConstraintLayout>
 </androidx.cardview.widget.CardView>
