--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -10,10 +10,10 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:orientation="vertical"
-        android:paddingBottom="@dimen/trade_size_dp_16"
         android:paddingLeft="@dimen/trade_size_dp_40"
-        android:paddingRight="@dimen/trade_size_dp_40"
         android:paddingTop="@dimen/trade_size_dp_16"
+        android:paddingRight="@dimen/trade_size_dp_40"
+        android:paddingBottom="@dimen/trade_size_dp_16"
         tools:context="main.MainActivity">
 
         <ImageView
@@ -21,13 +21,13 @@
             android:layout_width="match_parent"
             android:layout_height="@dimen/trade_size_dp_120"
             android:layout_gravity="center"
+            android:layout_marginTop="@dimen/trade_size_dp_35"
             android:contentDescription="@string/app_name"
             android:padding="@dimen/trade_size_dp_5"
-            android:layout_marginTop="@dimen/trade_size_dp_35"
-            app:layout_constraintTop_toTopOf="parent"
-            app:layout_constraintStart_toStartOf="parent"
+            android:src="@drawable/icon_visto"
             app:layout_constraintEnd_toEndOf="parent"
-            android:src="@drawable/icon_visto" />
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toTopOf="parent" />
 
         <TextView
             android:id="@+id/txt_pop"
@@ -53,30 +53,79 @@
             android:textAppearance="@style/TextAppearance.AppCompat.Display1"
             android:textColor="@color/red"
             android:textSize="@dimen/trade_txt_size_sp_40"
-            app:layout_constraintTop_toTopOf="@+id/txt_pop"
             app:layout_constraintStart_toEndOf="@+id/txt_pop"
-            />
+            app:layout_constraintTop_toTopOf="@+id/txt_pop" />
 
         <TextView
             android:id="@+id/txt_show"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
+            android:layout_marginTop="@dimen/trade_size_dp_20"
             android:gravity="end"
             android:text="@string/show"
             android:textAppearance="@style/TextAppearance.AppCompat.Display1"
             android:textColor="@color/blue"
-            android:layout_marginTop="@dimen/trade_size_dp_20"
             android:textSize="@dimen/trade_txt_size_sp_30"
+            app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintHorizontal_bias="1.0"
-            app:layout_constraintTop_toTopOf="@+id/txt_pop"
-            app:layout_constraintEnd_toEndOf="parent" />
+            app:layout_constraintTop_toTopOf="@+id/txt_pop" />
+
+        <TextView
+            android:id="@+id/recuperar_senha"
+            android:layout_width="0dp"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="@dimen/trade_size_dp_14"
+            android:layout_weight="1"
+            android:focusable="true"
+            android:gravity="start"
+            android:text="@string/reset_password"
+            android:textStyle="bold"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toBottomOf="@+id/logar" />
+
+        <TextView
+            android:id="@+id/vincular_login"
+            android:layout_width="0dp"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="@dimen/trade_size_dp_14"
+            android:layout_weight="1"
+            android:gravity="right"
+            android:onClick="onclick"
+            android:text="@string/criar_login_popcorn"
+            android:textStyle="normal|bold|italic"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintTop_toBottomOf="@+id/logar"
+            tools:ignore="RtlHardcoded" />
+
+        <TextView
+            android:id="@+id/warining"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="@dimen/trade_size_dp_14"
+            android:layout_marginBottom="@dimen/trade_size_dp_14"
+            android:gravity="center_horizontal"
+            android:text="@string/anonimo_alerta"
+            android:textSize="@dimen/trade_txt_size_sp_12"
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintTop_toBottomOf="@+id/bt_anonimous" />
+
+        <com.google.android.material.button.MaterialButton
+            android:id="@+id/logar"
+            style="@style/Widget.MaterialComponents.Button.OutlinedButton"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="@dimen/trade_size_dp_14"
+            android:onClick="onclick"
+            android:text="@string/bt_signin"
+            android:textColor="@color/red2"
+            app:layout_constraintTop_toBottomOf="@+id/textinput_pass" />
 
         <com.google.android.material.textfield.TextInputLayout
             android:id="@+id/textinput_login"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            app:layout_constraintTop_toBottomOf="@+id/txt_show"
-            android:layout_marginTop="@dimen/trade_size_dp_8">
+            android:layout_marginTop="@dimen/trade_size_dp_8"
+            app:layout_constraintTop_toBottomOf="@+id/txt_show">
 
             <EditText
                 android:id="@+id/login"
@@ -84,6 +133,7 @@
                 android:layout_height="wrap_content"
                 android:layout_below="@+id/txt_listas"
                 android:layout_alignParentStart="true"
+                android:layout_alignParentLeft="true"
                 android:layout_marginTop="@dimen/trade_size_dp_21"
                 android:ems="10"
                 android:fitsSystemWindows="true"
@@ -92,11 +142,11 @@
         </com.google.android.material.textfield.TextInputLayout>
 
         <com.google.android.material.textfield.TextInputLayout
+            android:id="@+id/textinput_pass"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:id="@+id/textinput_pass"
-            app:layout_constraintTop_toBottomOf="@+id/textinput_login"
-            android:paddingTop="@dimen/trade_size_dp_3">
+            android:paddingTop="@dimen/trade_size_dp_3"
+            app:layout_constraintTop_toBottomOf="@+id/textinput_login">
 
             <EditText
                 android:id="@+id/pass"
@@ -104,6 +154,7 @@
                 android:layout_height="wrap_content"
                 android:layout_below="@+id/login"
                 android:layout_alignParentStart="true"
+                android:layout_alignParentLeft="true"
                 android:layout_marginTop="@dimen/trade_size_dp_17"
                 android:ems="10"
                 android:fitsSystemWindows="true"
@@ -111,46 +162,6 @@
                 android:imeOptions="actionSend"
                 android:inputType="textPassword" />
         </com.google.android.material.textfield.TextInputLayout>
-
-        <com.google.android.material.button.MaterialButton
-            android:id="@+id/logar"
-            style="@style/Widget.MaterialComponents.Button.OutlinedButton"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:onClick="onclick"
-            android:layout_marginTop="@dimen/trade_size_dp_14"
-            android:textColor="@color/red2"
-            android:text="@string/bt_signin"
-            app:layout_constraintTop_toBottomOf="@+id/textinput_pass" />
-
-            <TextView
-                android:id="@+id/recuperar_senha"
-                android:layout_width="0dp"
-                android:layout_height="wrap_content"
-                android:layout_weight="1"
-                android:gravity="start"
-                android:text="@string/reset_password"
-                android:textStyle="bold"
-                android:focusable="true"
-                android:layout_marginTop="@dimen/trade_size_dp_14"
-                app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintTop_toBottomOf="@+id/logar"
-                />
-
-            <TextView
-                android:id="@+id/vincular_login"
-                android:layout_width="0dp"
-                android:layout_height="wrap_content"
-                android:layout_weight="1"
-                android:gravity="right"
-                android:onClick="onclick"
-                android:text="@string/criar_login_popcorn"
-                android:textStyle="normal|bold|italic"
-                tools:ignore="RtlHardcoded"
-                android:layout_marginTop="@dimen/trade_size_dp_14"
-                app:layout_constraintEnd_toEndOf="parent"
-                app:layout_constraintTop_toBottomOf="@+id/logar"
-                />
 
         <mehdi.sakout.fancybuttons.FancyButton
             android:id="@+id/facebook"
@@ -171,8 +182,7 @@
             app:fb_text="Facebook Connect"
             app:fb_textColor="#ffffff"
             app:fb_textSize="16sp"
-            app:layout_constraintTop_toBottomOf="@+id/recuperar_senha"
-            />
+            app:layout_constraintTop_toBottomOf="@+id/recuperar_senha" />
 
         <mehdi.sakout.fancybuttons.FancyButton
             android:id="@+id/bt_anonimous"
@@ -180,10 +190,12 @@
             android:layout_height="@dimen/trade_size_dp_40"
             android:layout_marginTop="@dimen/trade_size_dp_8"
             android:onClick="onclick"
-            android:paddingBottom="@dimen/trade_size_dp_10"
-            android:paddingEnd="@dimen/trade_size_dp_20"
             android:paddingStart="@dimen/trade_size_dp_10"
+            android:paddingLeft="@dimen/trade_size_dp_10"
             android:paddingTop="@dimen/trade_size_dp_10"
+            android:paddingEnd="@dimen/trade_size_dp_20"
+            android:paddingRight="@dimen/trade_size_dp_20"
+            android:paddingBottom="@dimen/trade_size_dp_10"
             app:fb_borderColor="#FFFFFF"
             app:fb_borderWidth="@dimen/trade_size_dp_1"
             app:fb_defaultColor="#020259"
@@ -193,19 +205,7 @@
             app:fb_iconPosition="left"
             app:fb_text="@string/logar_como_anonimo"
             app:fb_textColor="#FFFFFF"
-            app:layout_constraintTop_toBottomOf="@+id/facebook"/>
-
-        <TextView
-            android:id="@+id/warining"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:text="@string/anonimo_alerta"
-            android:textAlignment="center"
-            app:layout_constraintTop_toBottomOf="@+id/bt_anonimous"
-            android:layout_marginTop="@dimen/trade_size_dp_14"
-            android:layout_marginBottom="@dimen/trade_size_dp_14"
-            app:layout_constraintBottom_toBottomOf="parent"
-            android:textSize="@dimen/trade_txt_size_sp_12" />
+            app:layout_constraintTop_toBottomOf="@+id/facebook" />
 
     </androidx.constraintlayout.widget.ConstraintLayout>
 </ScrollView>
