--- a/app/src/main/res/layout/adapter_similares.xml
+++ b/app/src/main/res/layout/adapter_similares.xml
@@ -32,6 +32,8 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:contentDescription="@string/imagem_filme"
+            android:layout_marginLeft="4dp"
+            android:layout_marginStart="4dp"
             android:src="@android:drawable/star_big_on"
             app:layout_constraintStart_toEndOf="@id/similares_img"
             app:layout_constraintTop_toBottomOf="@id/similares_date_avaliable"
@@ -42,6 +44,8 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:textSize="@dimen/trade_txt_size_sp_12"
+            android:layout_marginLeft="4dp"
+            android:layout_marginStart="4dp"
             app:layout_constraintStart_toEndOf="@id/similares_img"
             app:layout_constraintTop_toBottomOf="@id/similares_name"
             tools:text="2020" />
@@ -51,6 +55,8 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:textSize="@dimen/trade_txt_size_sp_24"
+            android:layout_marginLeft="4dp"
+            android:layout_marginStart="4dp"
             app:layout_constraintStart_toEndOf="@id/similares_img"
             app:layout_constraintTop_toTopOf="parent"
             tools:text="Name Traduzido" />
