--- a/app/src/main/res/layout/activity_person_perfil.xml
+++ b/app/src/main/res/layout/activity_person_perfil.xml
@@ -116,6 +116,8 @@
                 android:focusable="false"
                 app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintTop_toBottomOf="@id/birthday"
+                app:layout_constraintEnd_toStartOf="@id/image_person"
+                app:layout_constraintHorizontal_bias="0"
                 tools:text="na quebrada"
                 android:layout_marginLeft="@dimen/trade_size_dp_2" />
 
