--- a/app/src/main/res/layout/activity_person_tvshow.xml
+++ b/app/src/main/res/layout/activity_person_tvshow.xml
@@ -18,7 +18,7 @@
         <include layout="@layout/include_progress" />
 
         <TextView
-            android:id="@+id/sem_tvshow"
+            android:id="@+id/empty_tvshows"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_gravity="top"
