--- a/app/src/main/res/layout/bottom_streaming.xml
+++ b/app/src/main/res/layout/bottom_streaming.xml
@@ -30,7 +30,7 @@
         android:layout_marginStart="20dp"
         android:contentDescription="beta"
         android:text="@string/beta"
-        android:textColor="@color/black_transparente_produtora"
+        android:textColor="@color/transparent50"
         android:textSize="8sp"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
@@ -68,7 +68,7 @@
         android:id="@+id/label_stream"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
-        android:background="@color/transparent2"
+        android:background="@color/transparent50"
         android:fontFamily="sans-serif-condensed"
         android:gravity="center"
         android:text="@string/stream"
@@ -86,7 +86,7 @@
         android:id="@+id/label_rent"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
-        android:background="@color/transparent2"
+        android:background="@color/transparent50"
         android:fontFamily="sans-serif-condensed"
         android:gravity="center"
         android:text="@string/rent"
@@ -104,7 +104,7 @@
         android:id="@+id/label_bay"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
-        android:background="@color/transparent2"
+        android:background="@color/transparent50"
         android:fontFamily="sans-serif-condensed"
         android:gravity="center"
         android:text="@string/purchase"
