--- a/app/src/main/res/layout/bottom_streaming_tv.xml
+++ b/app/src/main/res/layout/bottom_streaming_tv.xml
@@ -29,7 +29,7 @@
         android:layout_marginLeft="20dp"
         android:contentDescription="@string/beta"
         android:text="@string/beta"
-        android:textColor="@color/black_transparente_produtora"
+        android:textColor="@color/transparent50"
         android:textSize="8sp"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
@@ -39,7 +39,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="@string/more_details_tv_stream"
-        android:textColor="@color/black_transparente_produtora"
+        android:textColor="@color/transparent50"
         android:textSize="8sp"
         app:layout_constraintStart_toStartOf="@id/beta"
         app:layout_constraintTop_toBottomOf="@id/beta"
@@ -76,7 +76,7 @@
         android:id="@+id/label_stream"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:background="@color/transparent2"
+        android:background="@color/transparent50"
         android:fontFamily="sans-serif-condensed"
         android:gravity="center"
         android:text="@string/main_stream_tv"
