--- a/app/src/main/res/layout/poster_person.xml
+++ b/app/src/main/res/layout/poster_person.xml
@@ -9,7 +9,7 @@
     android:scaleType="centerCrop"
     app:cardCornerRadius="1dp"
     app:cardElevation="1dp"
-    app:cardBackgroundColor="@color/black_transparente_produtora"
+    app:cardBackgroundColor="@color/transparent50"
     app:cardPreventCornerOverlap="true"
     app:cardUseCompatPadding="true"
     app:contentPadding="4dp">
